# faucet-stream

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
.trunk/: trunk.yaml
examples/: cursor_pagination.rs  oauth2_flow.rs  page_pagination.rs
src/: config.rs  error.rs  lib.rs  replication.rs  schema.rs  stream.rs  transform.rs
src/auth/: api_key.rs  basic.rs  bearer.rs  custom.rs  mod.rs  oauth2.rs
src/extract/: jsonpath.rs  mod.rs
src/pagination/: cursor.rs  link_header.rs  mod.rs  next_link_body.rs  offset.rs  page.rs
src/retry/: backoff.rs  mod.rs
tests/: auth_test.rs  extract_test.rs  pagination_test.rs  stream_test.rs
