[package]
name = "faucet-stream"
version = "0.1.3"
edition = "2024"
rust-version = "1.94"
description = "A declarative, config-driven REST API client with pluggable authentication, pagination, and JSONPath extraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PawanSikawat/faucet-stream"
documentation = "https://docs.rs/faucet-stream"
readme = "README.md"
keywords = ["rest", "api", "pagination", "http", "streaming", "meltano", "singer", "stream", "data"]
categories = ["web-programming::http-client"]
exclude = [".trunk/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.13", features = ["json", "form", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonpath-rust = "1"
tokio = { version = "1", features = ["time"] }
thiserror = "2"
base64 = "0.22"
tracing = "0.1"
async-stream = "0.3.6"
futures-core = "0.3.32"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tracing-subscriber = "0.3"
futures = "0.3.32"
serde = { version = "1", features = ["derive"] }
